--- a/KriddieFolder/GAVI_Geomorphology_2021-12-10.Rmd
+++ b/KriddieFolder/GAVI_Geomorphology_2021-12-10.Rmd
@@ -161,6 +161,7 @@ fig
 
 ```{r 3d plot and synop, echo=FALSE}
 
+
 df <- full_join(synop_mainstem,Geomorph, by=c("lat","lon")) 
 
 fig <- plot_ly(df, x = ~lat, y = ~lon, z = ~ele, size = 1,
@@ -253,10 +254,12 @@ df2$num <- '2'
 
 yeah, that looks ok I guess. I really need to just collect this again :(
 
+Let's just work with downstream of GAVI for now
+
 ```{r bind dataframes, echo=FALSE}
 
 #now we need to make a dataframe that discribes this relationship between lat lon
-df_prediction <- rbind(df1,df2)
+df_prediction <- rbind(df1)
 
 plot(df_prediction$lon~df_prediction$lat,col=df_prediction$num)
 
@@ -269,8 +272,7 @@ now we have a smooth data frame of lat/lon data, we calculate the distance betwe
 ```{r calc dist}
 
 ###create a loop and calculate distance along the river from the predict_df. THen we can bind in the GEOMORPH!
-df_prediction <- rbind(df1,df2) %>% drop_na(lat)
-
+df_prediction <- rbind(df1, df2) %>% drop_na(lat) %>% filter(lat <= -.327)
 
 df_prediction$num <- NULL
 #df_prediction <- df_prediction[,c("lon","lat")]
@@ -341,10 +343,8 @@ ok sweet that looks really good
 
 We also need to snap the synoptic df (for later)
 ```{r snap synop pts}
+synop_mainstem <- synop_mainstem %>% filter(lat <= -.327)
 
-#df_prediction <- rbind(df1,df2,df3,df4)
-
-#df_prediction <- df_prediction[,c("lon","lat","num")] 
 x <- SpatialPoints(synop_mainstem[,c(1:2)])
 y <- SpatialPoints(df_prediction[,c(1:2)]) 
 plot(x, col = "red")
@@ -379,12 +379,11 @@ now we have created a distance column that we can plot the elevation data agains
 
 ```{r plot dist v ele, echo = FALSE}
 
+df_prediction <- df_prediction%>% filter(lat <= -.327)
+
 fig <- plot_ly(df_prediction, x = ~dist, y = ~ele, size = 1)
 fig
 ```
-
-kriddie, you are doing so good!
-Okay, now lets fit another spline to this puppy
 
 ```{r another spline, echo=FALSE}
 df_prediction <- df_prediction %>% filter(dist > 0)
@@ -407,8 +406,37 @@ ele_fit<-as.data.frame(dist)
 ele_fit$ele <- ele
 
 ```
+
+```{r interpolate spline, echo=FALSE}
+
+fit <- lm(ele~bs(dist,
+                   knots = c(395), 
+                   degree = 10),
+            data=df_prediction)
+
+distlims <- range(df_prediction$dist)
+
+
+pred1 <- predict(fit, data.frame(dist = df_prediction$dist), se = TRUE)
+
+df_prediction$ele_fit <- pred1$fit
+
+ggplot(data=df_prediction%>%drop_na(Flux_ave), aes(dist, ele_fit, color=CO2_ppm_ave)) +
+  geom_point()
+
+#ggplot(data=df_prediction, aes(dist, ele_fit, col="CO2_ppm_ave")) +
+ # geom_point(size = 3, alpha = .5, color = "blue")
+
+
+
+```
+
+
+
+
 ##loess spline
-i think loess might be a little better for this? IT IS BETTER!
+i think loess might be a little better for this? IT IS NOT
+But maybe just because data is not great. please revisit
 
 ```{r diff way}
 
@@ -430,8 +458,8 @@ take the loess spline and make a data frame that interpolates these data points
 
 ```{r interpolate loess, echo=FALSE}
 
-fit <- loess(ele ~ dist, degree=2, span = 0.30, data=df_prediction)
-distlims <- range(df_prediction$dist)
+#fit <- loess(ele ~ dist, degree=2, span = 0.30, data=df_prediction)
+#distlims <- range(df_prediction$dist)
 
 
 pred1 <- predict(fit, data.frame(dist = df_prediction$dist), se = TRUE)
