--- a/RScripts/CO2_Corrected.Rmd
+++ b/RScripts/CO2_Corrected.Rmd
@@ -133,27 +133,26 @@ CO2_01  <- CO2_01%>%
 #CO2_02
 CO2_02  <- CO2_02 %>% 
   filter(DateTime < as.POSIXct("2021-06-11 03:34:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-16 11:52:00", tz = "UTC")) %>%
+    filter(DateTime < as.POSIXct("2021-06-29 14:40:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-29 15:00:00", tz = "UTC")) %>%
   filter(DateTime < as.POSIXct("2021-06-30 10:42:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-30 11:45:00", tz = "UTC")) %>%
-  filter(DateTime < as.POSIXct("2021-07-14 11:06:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-14 11:11:00", tz = "UTC")) %>% 
-  filter(DateTime < as.POSIXct("2021-07-14 13:18:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-14 14:13:00", tz = "UTC")) %>%
+#  filter(DateTime < as.POSIXct("2021-07-14 11:06:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-14 11:11:00", tz = "UTC")) %>% 
+#  filter(DateTime < as.POSIXct("2021-07-14 13:18:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-14 14:13:00", tz = "UTC")) %>%
   filter(DateTime < as.POSIXct("2021-07-16 11:56:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-16 11:57:00", tz = "UTC")) %>%
   filter(DateTime != as.POSIXct("2021-07-16 12:00:05", tz = "UTC")) %>% 
   filter(DateTime != as.POSIXct("2021-07-19 10:30:05", tz = "UTC"))  %>%
+  filter(DateTime != as.POSIXct("2021-06-25 10:04:00", tz = "UTC"))  %>%
 #injection July 13
-  filter(DateTime < as.POSIXct("2021-07-13 10:15:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-13 15:15:00", tz = "UTC"))
+  filter(DateTime < as.POSIXct("2021-07-13 10:15:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-13 15:15:00", tz = "UTC"))%>%
+#injection July 14
+  filter(DateTime < as.POSIXct("2021-07-14 09:00:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-14 15:30:00", tz = "UTC"))
 
-CO2_02$DateTime <- round_date(CO2_02$DateTime,unit="1 minutes")
+CO2_02 <- CO2_02
+CO2_02$DateTime <- round_date(CO2_02$DateTime,unit="15 minutes")
 CO2_02 <- CO2_02 %>% 
   group_by(DateTime) %>% 
-  summarise(ppm = sum(ppm))
-
-CO2_02_time <- as.data.frame(seq(from = as.POSIXct("2021-06-09 12:15:00", tz = "UTC"), to = as.POSIXct("2021-12-30 12:45:00", tz = "UTC"), by='15 min')) # lubridate
-colnames(CO2_02_time) <- "DateTime"
-CO2_02 <- left_join(CO2_02_time,CO2_02, by="DateTime")
-CO2_02 <- CO2_02 %>% drop_na(ppm) %>% filter(ppm > 10)
-
+  summarise(ppm = mean(ppm))
 CO2_02$Station <- "CO2_02"
-rm(CO2_02_time)
+
 
 #CO2_03
 CO2_03  <- CO2_03 %>%
@@ -164,12 +163,15 @@ CO2_04 <- CO2_04%>%
   filter(DateTime != as.POSIXct("2021-06-10 16:00:00", tz = "UTC"))%>%
   filter(DateTime < as.POSIXct("2021-07-12 15:59:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-16 13:00:00", tz = "UTC"))%>%
   filter(DateTime < as.POSIXct("2021-07-28 12:15:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-28 13:15:00", tz = "UTC"))%>%
-  filter(DateTime != as.POSIXct("2021-10-20 12:45:05", tz = "UTC")) 
+  filter(DateTime != as.POSIXct("2021-10-20 12:45:05", tz = "UTC")) %>%
+#injection July 14
+  filter(DateTime < as.POSIXct("2021-07-14 09:00:00", tz = "UTC") | DateTime > as.POSIXct("2021-07-14 15:30:00", tz = "UTC"))
+
 
 CO2_04$DateTime <- round_date(CO2_04$DateTime,unit="15 minutes")
 CO2_04 <- CO2_04 %>% 
   group_by(DateTime) %>% 
-  summarise(ppm = sum(ppm))
+  summarise(ppm = mean(ppm))
 CO2_04$Station <- "CO2_04"
 
 #CO2_Well01
@@ -181,17 +183,28 @@ CO2_Well02 <- CO2_Well02 %>%
   filter(DateTime < as.POSIXct("2021-06-14 11:36:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-17 07:21:00", tz = "UTC")) %>%
   filter(DateTime < as.POSIXct("2021-06-17 20:21:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-18 08:21:00", tz = "UTC"))%>%
   filter(DateTime != as.POSIXct("2021-06-30 15:15:00", tz = "UTC")) %>%
-  filter(DateTime != as.POSIXct("2021-07-02 12:00:00", tz = "UTC"))%>%
+  filter(DateTime != as.POSIXct("2021-07-02 12:00:00", tz = "UTC")) %>%
   filter(DateTime < as.POSIXct("2021-10-02 21:45:00", tz = "UTC") | DateTime > as.POSIXct("2021-10-20 13:15:00", tz = "UTC"))
 
 CO2_Well02$DateTime <- round_date(CO2_Well02$DateTime,unit="15 minutes")
 CO2_Well02 <- CO2_Well02 %>% 
   group_by(DateTime) %>% 
-  summarise(ppm = sum(ppm))
+  summarise(ppm = mean(ppm))
 CO2_Well02$Station <- "CO2_Well02"
 
 #plot pressure
-plot_ly(CO2_04, x = ~DateTime, y= ~ppm, type = 'scatter', mode = 'markers')
+plot_ly(CO2_01 %>%
+  filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y= ~ppm, type = 'scatter', mode = 'markers')
+plot_ly(CO2_02%>%
+  filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y= ~ppm, type = 'scatter', mode = 'markers')
+plot_ly(CO2_03%>%
+  filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y= ~ppm, type = 'scatter', mode = 'markers')
+plot_ly(CO2_04%>%
+  filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y= ~ppm, type = 'scatter', mode = 'markers')
+plot_ly(CO2_Well01%>%
+  filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y= ~ppm, type = 'scatter', mode = 'markers')
+plot_ly(CO2_Well02%>%
+  filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y= ~ppm, type = 'scatter', mode = 'markers')
 
 ```
 
